--- a/src/components/productCard.astro
+++ b/src/components/productCard.astro
@@ -1,3 +1,43 @@
 ---
 import "../style/style.css";
+const { src, name, price } = Astro.props;
+
+const images = [
+  { src: 'path/to/image1.jpg', name: 'Image 1', price: '$10' },
+  { src: 'path/to/image2.jpg', name: 'Image 2', price: '$15' },
+  { src: 'path/to/image3.jpg', name: 'Image 3', price: '$20' },
+  { src: 'path/to/image4.jpg', name: 'Image 4', price: '$25' },
+  { src: 'path/to/image5.jpg', name: 'Image 5', price: '$30' },
+  { src: 'path/to/image6.jpg', name: 'Image 6', price: '$35' },
+];
 ---
+
+    <div class="polaroid">
+        <img src={src} alt={name}/>
+        <div class="product">
+            <p>{name}</p>
+            <p class="bold">{price}</p>
+        </div>
+    </div>
+
+  <style>
+.polaroid {
+    display: inline-block;
+    border: 1px solid black;
+    padding: 40px;
+    width: fit-content;
+    text-align: center;
+    background-color: var(--sand);
+  }
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+
+  .bold {
+    font-weight: bold;
+  }
+  </style>
+  
