--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import "../style/style.css";
 import Header_card from "../components/header_card.astro";
-import Footer from "../components/Footer.astro"
+import Footer from "../components/footer.astro"
 import Banner from "../components/banner.astro";
 import Overskift from "../components/overskift.astro";
 import ProductCard from "../components/productCard.astro";
-import Tips from "../components/Tips.astro"
+import Tips from "../components/tips.astro"
 import Inspi_card from "../components/inspi_card.astro";
 ---
 
@@ -43,7 +43,7 @@ import Inspi_card from "../components/inspi_card.astro";
       Find mere af vores udvalg <a href="">her</a>
     </p>
     <Overskift text="Tips" />
-<<<<<<< HEAD
+HEAD
     <p class="extra_t">Hold musen over billedet for fun-fact:</p>
 =======
 	<Tips header="Blomster i isterninger:" text="At tørre blomster er en enkel proces, der bevarer deres skønhed i lang tid. Start med at vælge friske blomster med stærke stængler. Bind dem sammen i små bundter og hæng dem op ned et varmt og tørt sted, gerne med god luftcirkulation. Efter et par uger vil blomsterne være tørre og klar til brug. Du kan bruge dem til dekoration, potpourri eller endda i badebomber for at tilføje en smuk og naturlig duftoplevelse." tpic="../../img/istern.avif" alt="Isterninger med blosmter" fact1="Vidste du, at roser faktisk er spiselige? Mange tror, at roser kun er til pynt, men faktisk kan næsten alle roser spises, dog med varierende smag alt efter sorten. De har en fin og delikat smag, der kan bruges til at give en subtil rosearoma til mad og drikke. Det er en helt ny måde at nyde disse smukke blomster på!" fact2="For festlige blomsteristerninger, brug spiselige blomster som violer, lavendel, kamille, rosenblade, nelliker, borago eller morgenfruer." />
@@ -51,8 +51,9 @@ import Inspi_card from "../components/inspi_card.astro";
 	<Tips header="Lær at tørre dine blomster:" text="At tørre blomster er en enkel proces, der bevarer deres skønhed i lang tid. Start med at vælge friske blomster med stærke stængler. Bind dem sammen i små bundter og hæng dem op ned et varmt og tørt sted, gerne med god luftcirkulation. Efter et par uger vil blomsterne være tørre og klar til brug. Du kan bruge dem til dekoration, potpourri eller endda i badebomber for at tilføje en smuk og naturlig duftoplevelse." tpic="../../img/tbuket.avif" alt="Tørret blomster" fact1="Tørrede blomster har været brugt i årtusinder til både medicinske og dekorative formål. I oldtiden brugte forskellige kulturer tørrede blomster til at lave urtemedicin og te, da de troede på deres helbredende egenskaber. Disse blomster blev også brugt til at lave duftende poser, der blev lagt i skabe eller sengelinned for at holde dem friske og duftende. Så tørrede blomster har en lang historie med at være både nyttige og smukke!" fact2="Vælg friske blomster som roser, lavendel, gypsophila, og statice." />
 	<Tips header="Lær at binde din egen blomsterkrans:" text="At lave blomsterkranse er en sjov og kreativ aktivitet, der tilføjer et strejf af natur til ethvert outfit. Start med at vælge friske blomster med stærke stængler og bøjelige grene. Bind derefter blomsterne sammen i små bundter med blomstertråd eller snor. Form disse bundter til en cirkel og bind enderne sammen. Du kan også tilføje grønne blade eller andre dekorative elementer efter ønske. Når kranse er færdige, har du en smuk og naturlig accessorie, perfekt til sommerfestivaler, bryllupper eller en tur i parken." tpic="../../img/krans.avif" alt="Blomsterkrans" fact1="For at forlænge holdbarheden af friske blomster - de elsker sødt! Derfor kan du tilføje sukker til vandet for at give blomsterne en energikilde eller tilføje lidt eddike for at hæmme bakterievækst. En anden måde er at skære stænglerne under vand for at forhindre luft i at komme ind i stænglerne, hvilket kan blokere vandoptagelsen. I gamle dage lagde man en kobbermønt i, og mente at det forlængende blomsternes levetid." fact2="For en blomsterkrans, brug friske blomster som roser, lavendel, tusindfryd, og eukalyptus" />
 
->>>>>>> af3de5d5076b59a132b8b638dc351ba053ced0ca
     <Footer />
+
+    <ProductCard />
   </body>
 
 
